# aerial-sim

./: README.md  docker-compose.yml  notes.md
.devcontainer/: devcontainer.json
docker/: Dockerfile  Dockerfile.arm
docker/lidar_to_image_depth/: CMakeLists.txt  package.xml  setup.cfg  setup.py
docker/lidar_to_image_depth/launch/: start.launch.py  static_bag_transf.launch.py
docker/lidar_to_image_depth/params/: params.yaml
docker/lidar_to_image_depth/src/: lidar_to_image_depth.cpp  lidar_to_image_projection.cpp
drone_joy_control/: CMakeLists.txt  README.md  package.xml
drone_joy_control/config/: joy_config.yaml
drone_joy_control/drone_joy_control/: __init__.py  drone_joy_api_controller.py  joy_controller_node.py
drone_joy_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
drone_joy_control/install/drone_joy_control/lib/drone_joy_control/: drone_joy_api_controller.py
drone_joy_control/install/drone_joy_control/local/lib/python3.10/dist-packages/drone_joy_control-0.0.1-py3.10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
drone_joy_control/install/drone_joy_control/share/ament_index/resource_index/package_run_dependencies/: drone_joy_control
drone_joy_control/install/drone_joy_control/share/ament_index/resource_index/parent_prefix_path/: drone_joy_control
drone_joy_control/install/drone_joy_control/share/drone_joy_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
drone_joy_control/install/drone_joy_control/share/drone_joy_control/cmake/: drone_joy_controlConfig.cmake
drone_joy_control/install/drone_joy_control/share/drone_joy_control/launch/: joy_api_control.launch.py
drone_joy_control/launch/: joy_control.launch.py
simulation/: aerostack2.yml  config.yaml  mission.py  mission_prettier.py  run_joy_api_control.sh  run_joy_control.sh  rviz2_config.rviz  world.yaml
urdf_serving/: sdf_to_urdf_publisher.py
