<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_joy_control</name>
  <version>0.0.1</version>
  <description>ROS package for controlling drones with joystick input</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>as2_msgs</depend>
  <depend>as2_motion_reference_handlers</depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>joy_linux</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>